# video-kb

./: .env.example  .gitignore  .mcp.json  GETTING_STARTED.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
configs/: aliases.suggested.yaml  aliases.yaml  default.yaml
docs/: PLAN_doc_ingest_audit.md
scripts/: doctor.sh  install.sh  list_gemini_models.py  test_vision_claude.py
src/kb/: __init__.py  cli.py  config.py  pipeline.py  schemas.py  utils.py
src/kb/embedding/: bge.py  chunking.py  splitter.py
src/kb/export/: claude_project.py
src/kb/fusion/: align.py
src/kb/ingest/: docs.py  downloader.py  extractor.py  scenes.py
src/kb/mcp/: __init__.py  server.py
src/kb/rag/: __init__.py  answer.py
src/kb/retrieval/: __init__.py  aliases.py  extract_terms.py
src/kb/storage/: chroma_client.py
src/kb/structuring/: claude_code.py  gemini_fallback.py  prompts.py
src/kb/stt/: whisper_local.py
src/kb/vision/: claude_code.py  gemini.py
tests/: test_char_splitter.py  test_fusion.py  test_ingest_docs.py  test_utils.py  test_utils_parse_json.py
